tests/integration/telemetry/stats/prometheus/tcp/testdata/cleanup.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cleanup-filter
spec:
  configPatches:
    # Remove this after https://github.com/istio/istio/issues/20203 is fixed.
    - applyTo: NETWORK_FILTER
      match:
        context: ANY
        listener:
          filterChain:
            filter:
              name: "envoy.mongo_proxy"
      patch:
        operation: REMOVE
